--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend api for blog project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,8 +14,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.7.14",
     "passport": "^0.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.1"
   }
 }
