add node engine to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "blog-api",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.6.0"
+  },
   "description": "backend api for blog project",
   "main": "index.js",
   "scripts": {
