--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon app.js"
+    "watch": "nodemon app.js",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
